# SPL20

./: .gitignore  GEMINI.md  It seems like the input was cut off. Please provide the rest of the text, and I'll be happy to help improve it based on the task "reduce_summaries".  README-ROADMAP.md  README.md  USER-GUIDE.md  pyproject.toml  repro_issue.spl  repro_output.txt  requirements-cookbook.txt  run_cookbook_on_momagrid.sh
.spl/: memory.db  vectors.faiss  vectors_meta.db
.spl/code_rag/: chroma.sqlite3
book/: ch_spl_vs_langgraph.md
cookbook/: README-framework-comparisons.md  README-spl-go.md  README-spl-ts.md  README.md  analyze_logs-v1.py  analyze_logs.py  cookbook_catalog.json  cookbook_catalog_go.json  cookbook_catalog_ts.json  run_all.py  run_cookbook_on_momagrid.sh  spl2-cookbook-20260319_024521.html
cookbook-v3.0/: cookbook_catalog.json  tools.py
cookbook-v3.0/41_human_steering/: human_steering.spl
cookbook-v3.0/42_knowledge_synthesis/: knowledge_synthesis.spl  readme.md
cookbook-v3.0/43_prompt_self_tuning/: prompt_self_tuning.spl  readme.md
cookbook-v3.0/44_adaptive_failover/: adaptive_failover.spl  readme.md
cookbook-v3.0/45_vision_to_action/: vision_to_action.spl
cookbook-v3.0/46_code_pipeline/: code_pipeline.spl  generate_code.spl  improve_code.spl  review_code.spl
cookbook-v3.0/47_arxiv_morning_brief/: arxiv_morning_brief.spl  functions.spl  readme.md  requirements.txt  summarize_paper.spl
cookbook/.spl/: memory.db  (+1 more)
cookbook/12_plan_and_execute/output-claude-sonnet4-6/: README.md  alembic.ini  config.py  database.py  main.py  pyproject.toml  requirements.txt  todos.db
cookbook/12_plan_and_execute/output-claude-sonnet4-6/alembic/: env.py
cookbook/12_plan_and_execute/output-claude-sonnet4-6/models/: todo.py
docs/: README-ROADMAP.md  SPL-2.0-User-Guide.md  SPL-design-v1.0.md  SPL-design-v1.1.md  School-Momagrid.md  USER-GUIDE.md  cross_run_all_results.md  fence_tags.md
examples/: hello_world.spl  ollama_proxy.spl  safe_generation.spl  self_refine.spl
memory/: project_dd_ecosystem.md  project_spl_vision.md  project_team.md
scripts/: ollama_proxy.spl  ollama_proxy_hardcoded.spl  ollama_proxy_no_args.spl  ollama_proxy_with_args.spl  test_logging.sh
spl/: __init__.py  analyzer.py  ast_nodes.py  cli.py  code_rag.py  config.py  executor.py  explain.py  functions.py  ir.py  lexer.py  optimizer.py  parser.py  stdlib.py  text2spl.py  token_counter.py  tokens.py  tools.py
spl2/: __init__.py  analyzer.py  ast_nodes.py  cli.py  code_rag.py  config.py  executor.py  explain.py  functions.py  ir.py  lexer.py  optimizer.py  parser.py  text2spl.py  token_counter.py  tokens.py  tools.py
tests/: README-test.md  test_adapters.py  test_analyzer.py  test_cli.py  test_executor.py  test_explain.py  test_integration.py  test_ir.py  test_lexer.py  test_optimizer.py  test_parser.py  test_phase1.spl  test_phase2.spl  test_recipe_49.py  test_storage.py  test_text2spl.py
(+1106 files in other folders)
