[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "spl2"
version = "2.0.0"
description = "SPL 2.0 - A Declarative Language for Agentic Workflow Orchestration"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.11"
dependencies = [
    "click>=8.0",
    "httpx",
    "dd-config",
    "dd-logging",
    "pyyaml",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
]

[project.scripts]
spl2 = "spl2.cli:main"

[tool.setuptools.packages.find]
include = ["spl2*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
