[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "spl-llm"
version = "2.0.0"
description = "SPL 2.0 - A Declarative Language for Agentic Workflow Orchestration"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.11"
dependencies = [
    "click>=8.0",
    "httpx",
    "dd-cache>=0.1.0",
    "dd-config>=0.1.0",
    "dd-embed>=0.1.0",
    "dd-extract>=0.1.0",
    "anthropic>=0.25.0",
    "dd-llm[openai]>=0.1.0",
    "dd-logging>=0.1.2",
    "dd-vectordb>=0.1.0",
    "pyyaml",
    "streamlit>=1.35",
    "pandas>=2.0",
    "streamlit-aggrid>=1.0.5",
    "streamlit-ace>=0.1.1",
    "chromadb>=0.5",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
]

[project.scripts]
spl = "spl.cli:main"

[tool.setuptools.packages.find]
include = ["spl*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
